# midisynth-rs

./: Cargo.toml  LICENSE  README.md
example/: Makefile  README.md  aegean.toml  gm.toml
example/aegean/: .gitignore  Makefile  checksum.sha256
src/: main.rs
