[package]
name = "midisynth-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
console = "0.16.2"
indicatif = "0.18.3"
midly = { version = "0.5.3", default-features = false, features = ["std"] }
rustysynth = "1.3.6"
toml = "0.9.11"
wavers = "1.5.1"
